# cardano-stake-pool-analytics-dataset

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
lib/: boto3_resource.py  db_conn.py
resources/core/: stakepool_metrics.sql
resources/core/epoch/: attrition_rate.sql
resources/core/monthly/: attrition_rate.sql
resources/core/yearly/: attrition_rate.sql
stakepool_operations/: etl_kpis.py  extract_and_load.py  extract_pool_metadata.py
tests/: test_lib.py
